Fix alignment of sign in dropdown when search bar appears

--- a/root/static/scss/nav.scss
+++ b/root/static/scss/nav.scss
@@ -141,6 +141,8 @@ nav.navbar {
 }
 
 .navbar-right {
+    align-items: center;
+    flex-wrap: nowrap;
     gap: 0;
     grid-area: icons;
     justify-self: end;
